--- a/application/.htaccess
+++ b/application/.htaccess
@@ -1,6 +1,8 @@
-<IfModule authz_core_module>
-    Require all denied
-</IfModule>
-<IfModule !authz_core_module>
-    Deny from all
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteEngine On
+RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
